--- a/legui.css
+++ b/legui.css
@@ -120,3 +120,11 @@
       width: 95vw;
     }
   }
+  #particles-js {
+    position : absolute;
+    width:100%;
+    height:100%;
+    z-index:0;
+}
+
+ 
